# indofast_kpi

./: README.md  app.py  color_classifier.py  kpi_calculator.py  merged_data.xlsx  pyproject.toml
