[tool.poetry]
name = "indofast-kpi"
version = "1.0.0"
description = "IndoFast Early Warning Framework - Station Planning & Monitoring Dashboard"
authors = ["IndoFast Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
plotly = "^5.18.0"
openpyxl = "^3.1.0"

[tool.poetry.scripts]
start = "streamlit run app.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

